# c_software_renderer

./: .gitignore  CMakeLists.txt  build  main.c  math.h  out.tga  renderer.h  utils.h
src/: main.c  raylib_window.c
src/assets/: model.c  model.h
src/core/: entity.c  entity.h
src/io/: tga_image.c  tga_image.h
src/math/: math.c  math.h  math_ext.c  math_ext.h
src/render/: color.c  color.h  renderer.c  renderer.h
src/utility/: utils.c  utils.h
